2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	patch [ 547491 ]: C-VAR-ADDRESS and OFFSET foreign-places
	* foreign1.lisp (OFFSET, C-VAR-ADDRESS): new public macros
	* foreign.d (%OFFSET): comment that it is used now

2002-04-22  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): new option: `-interactive-debug', which
	overrides batch-mode for -c, -x and exec-file
	* constsym.d (APPEASE-CERRORS): define here for the above

2002-04-22  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	* foreign.d (UNSIGNED-FOREIGN-ADDRESS): new function
	(FOREIGN-ADDRESS-VALUE): renamed to FOREIGN-ADDRESS-UNSIGNED
	* subr.d, constsym.d: ditto
	* foreign1.lisp (foreign-address-null): use FOREIGN-ADDRESS-UNSIGNED

2002-04-22  Sam Steingold  <sds@gnu.org>

	do not go into an edless loop on `clisp -x '(assert nil)'`
	* condition.lisp (assert): name the interactive CONTINUE restart
	functions for the benefit of APPEASE-CERRORS and MUFFLE-CERRORS
	(assert-restart-no-prompts, maybe-continue, muffle-cerror):
	new functions
	(muffle-cerrors): use MUFFLE-CERROR
	(appease-cerror): use MAYBE-CONTINUE
	(prompt-for-new-value): interact via *DEBUG-IO*, not *QUERY-IO*

2002-04-22  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 547046 ]: compiler-macro -> no special-operator
	* compiler.lisp (c-form): call EXPAND-COMPILER-MACRO before
	checking C-FORM-TABLE to accomodate expanding to a special form

2002-04-22  Sam Steingold  <sds@gnu.org>

	* cmacros.lisp (define-compiler-macro): call CHECK-REDEFINITION

2002-04-21  Sam Steingold  <sds@gnu.org>

	* cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp, cfgunix.lisp:
	* cfgwin32.lisp, cfgacorn.lisp (*clhs-root-default*):
	restore the DEFVAR lost on 2002-04-12

2002-04-18  Sam Steingold  <sds@gnu.org>

	fixed bug [ 543072 ]: make-encoding :input-action on bad input
	* stream.d (iconv_mblen, iconv_mbstowcs): treat EINVAL (incomplete