@@ -1,8 +1,16 @@
 2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
 	    Sam Steingold  <sds@gnu.org>
 
+	patch [ 547541 ]: WITH-FOREIGN-OBJECT FFI stack allocation
+	* foreign.d (EXEC-ON-STACK): new function
+	* constsym.d, subr.d: ditto
+	* foreign1.lisp (with-foreign-object): new public macro
+
+2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
+	    Sam Steingold  <sds@gnu.org>
+
 	patch [ 547491 ]: C-VAR-ADDRESS and OFFSET foreign-places
-	* foreign1.lisp (OFFSET, C-VAR-ADDRESS): new public macros
+	* foreign1.lisp (offset, c-var-address): new public macros
 	* foreign.d (%OFFSET): comment that it is used now
 
 2002-04-22  Sam Steingold  <sds@gnu.org>
